tests/negative/traits/virtual_return_refers_to_self.orng
// virtual_return_refers_to_self.orng:6:15: error: virtual method `lol` of trait `Lol` refers to `Self` type
//     virtual fn lol() -> Self
//              ^
// 
trait Lol {
    virtual fn lol() -> Self
}